# python-selenium-test-project-314

./: .gitignore  Makefile  README.md  conftest.py  package-lock.json  package.json  pyproject.toml  ruff.toml
src/: main.jsx
tests/: config.py  conftest.py  constants.py  test_auth.py  test_basic.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
tests/pages/: base.py  labels.py  login.py  statuses.py  tasks.py  users.py
tests/utils/: logging.py  text.py
